--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,7 +56,7 @@
         "@equinor/eds-tokens": "^0.9.2",
         "@equinor/fusion": "^3.4.15",
         "@equinor/fusion-framework-app": "^8.1.1",
-        "@equinor/fusion-framework-cli": "9.8.1",
+        "@equinor/fusion-framework-cli": "^10.0.2",
         "@equinor/fusion-framework-module-ag-grid": "^31.0.1",
         "@equinor/fusion-framework-module-context": "^4.0.21",
         "@equinor/fusion-framework-module-navigation": "3.1.4",
@@ -95,6 +95,7 @@
         "@types/react-dom": "^18.2.0",
         "@types/react-router-dom": "^5.3.3",
         "@types/styled-components": "^5.1.18",
+        "@types/uuid": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^5.62.0",
         "@typescript-eslint/parser": "^5.45.0",
         "dotenv-webpack": "^7.1.0",
